# METIS

./: .gitmodules  CMakeLists.txt  MetisConfig.cmake.in  SubmoduleInit.cmake  metisConfig.cmake.in
include/: metis.h.in
libmetis/: coarsen.c
